# Tix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board.txt  compile_commands.json  dump.txt  main.cpp  tix.c
Eggo/: makefile  test
Eggo/std/: backend.c  std_h.asm
Eggo/tests/: test.asm
binary/: CMakeCache.txt  Makefile  cmake_install.cmake  tix.ll~  yo
examples/: TIXIO.tix  TIXIO.tix.asm  TIXMATH.tix  TIXMATH.tix.asm  comments.tx  expr.tx  expr.tx~  expr2.tx  expr2.tx~  hello.tx  main.tix  main.tix.asm
headers/: .parser.hpp.swo  _glob_symbols.hpp  asmgen.hpp  eggoLog.hpp  lexer.hpp  parser.hpp  token.hpp
rt/: runtime.c  start.s  texit.s  va_list.h
src/: context.c  context.h  eggo.cpp  internals.h  lexer.c  lexer.h  nasm_generator.c  nasm_generator.h  node.c  node.h  parser.c  parser.h  qbe.c  qbe.c~  qbe.h  qbe.h~  semantic.c  semantic.c~  semantic.h  semantic.h~  string_builder.h  symbol.c  symbol.h  tix.cpp  tix.hpp  token_list.c  token_list.h  types.c  types.h
src/backend/: context.hpp  function.hpp  generator.cpp  generator.cpp~  generator.hpp  node.hpp  parser.hpp  variable.hpp
src/backend/systems/: Diagnostics.hpp
src/bak/: lexer.h
src/frontend/: lexer.hpp  stageprinter.hpp  token.hpp
src/ir/: README.md  ir.c  ir_gen.h  nero.h  nero.h~  node_walker.c  node_walker.c.bak  node_walker.h  node_walker.h~
src/lists/: lists.h
tests/: test001.tx  test001.tx~
tests/clang/: main.c  main.ll
